# image-deduplicator

./: .gitignore  DOWNLOAD.md  EXE_README.md  GITHUB_SETUP.md  LICENSE  QUICK_SETUP.txt  README.md  RELEASE_NOTES.md  USAGE.md  build_exe.bat  build_exe.spec  convert_icon.py  pyproject.toml  run.py
.kiro/specs/image-deduplicator/: design.md  requirements.md  tasks.md
src/image_deduplicator/: __init__.py  cli.py  deleter.py  detector.py  hasher.py  main.py  models.py  scanner.py
tests/: __init__.py  conftest.py  test_cli.py  test_hasher.py  test_main.py  test_models.py  test_scanner.py
